--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "stylis": "^4.3.4",
+    "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
